--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,28 +1,44 @@
 name: Build ALParserCLI
 
 on:
-  workflow_dispatch:
   push:
-    branches: [ main ]
+    branches:
+      - main
+  pull_request:
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
   build:
     runs-on: windows-latest
 
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
-    - name: Setup .NET
-      uses: actions/setup-dotnet@v3
-      with:
-        dotnet-version: '8.0.x'
+      - name: Setup .NET SDK
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '7.0.x'  # Use latest supported 7.x SDK
 
-    - name: Publish CLI as self-contained exe
-      run: dotnet publish ./ALParserCLI/ALParserCLI.csproj -c Release -r win-x64 --self-contained true -p:PublishSingleFile=true -o output
+      - name: Restore dependencies
+        run: dotnet restore ALParserCLI/ALParserCLI.csproj
 
-    - name: Upload exe artifact
-      uses: actions/upload-artifact@v4
-      with:
-        name: ALParserCLI
-        path: output/ALParserCLI.exe
+      - name: Build ALParserCLI
+        run: dotnet build ALParserCLI/ALParserCLI.csproj --configuration Release --no-restore
+
+      - name: Publish ALParserCLI (single-file executable)
+        run: |
+          dotnet publish ALParserCLI/ALParserCLI.csproj \
+            --configuration Release \
+            --runtime win-x64 \
+            --self-contained true \
+            -p:PublishSingleFile=true \
+            -o ./output
+
+      - name: Upload executable artifact
+        uses: actions/upload-artifact@v3
+        with:
+          name: ALParserCLI-win-x64
+          path: ./output/*
