--- a/ALParserCLI/ALParserCLI.csproj
+++ b/ALParserCLI/ALParserCLI.csproj
@@ -6,13 +6,11 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <LangVersion>latest</LangVersion>
+    <EnableDefaultCompileItems>false</EnableDefaultCompileItems> <!-- 👈 disables auto-include -->
   </PropertyGroup>
 
   <ItemGroup>
-    <!-- Explicitly include Program.cs -->
     <Compile Include="Program.cs" />
-    
-    <!-- Include all parser source files from parent folders -->
     <Compile Include="..\ALObjectParser\**\*.cs" Exclude="..\ALObjectParser\**\bin\**;..\ALObjectParser\**\obj\**" />
   </ItemGroup>
 
